--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,15 @@
     <color name="iron">#CCCCCC</color>
     <color name="white">#FFFFFF</color>
     <!-- end new colors-->
+    <!-- feed colors-->
+
+    <color name="feed_bg">#d3d6db</color>
+    <color name="feed_item_bg">#ffffff</color>
+    <color name="feed_item_border">#c2c3c8</color>
+    <color name="link">#0a80d1</color>
+    <color name="timestamp">#a0a3a7</color>
+
+
+
+    <!-- end pf feed colors-->
 </resources>
