--- a/app/src/main/res/layout/activity_feeds.xml
+++ b/app/src/main/res/layout/activity_feeds.xml
@@ -20,10 +20,9 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="2">
-            <android.support.v7.widget.AppCompatImageView
+            <com.android.volley.toolbox.NetworkImageView
                 android:layout_width="58dp"
                 android:layout_height="62dp"
-                android:src="@drawable/user"
                 android:id="@+id/userImage"
                 />
 
