--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -13,6 +13,9 @@
 
         />
 
-
+    <item
+        android:id="@+id/Remove"
+        android:title="Remove Photo"
+        android:icon="@android:drawable/ic_menu_delete"/>
 
 </menu>
